update backend va frontend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.analysis.extraPaths": [
         "./ai-core"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
